--- a/07_conclusions/conclusions.tex
+++ b/07_conclusions/conclusions.tex
@@ -46,12 +46,23 @@ Probably most noticeable is the matter of hardware. The parallel reality platfor
 
 Investigating the application of parallel reality to other domains represents possibly the largest avenue of potential further extension. While the user studies discussed in this thesis experimentally showed the worth of parallel reality when applied to cultural heritage, parallel reality as a concept could be applied to many fields. Postulating for but a moment, one can imagine how parallel reality could be applied to architecture \& visualisation of renovations, using the physical layout of an environment as a canvas for novel artistic expression, to the study of PolySocial interactions involving real \& VR parties \& new styles of gaming that merge both real \& virtual play fields. As society becomes more familiar with \& more dependent upon almost constant connection to the virtual, whether in the form of 2D Web based social networks \& apps or richer multimedia experiences, the utility of platforms that allow real \& virtual environments to be cycled between in a trivial manner will likely present many exciting opportunities.
 
+multiuser
+
+Experience assessment
 
 
 %=========================================================================================================
 
 \section{Final Thoughts}
 
-Final quote?
+While the vision of Neil Stephenson's metaverse, where all computer mediated communication takes place within a persistent multi-user 3D virtual world, may still be many years to come, parallel reality has today already given us a glimpse into how mankind may one day integrate such a construct into their real environments in a manner akin to how the smartphone has for the 2D Web.
+
+some success can be claimed
+
+
+
+the words of Orlan (emphasis original);
+
+\textit{``I come back therefore to my initial words about the `\textbf{and}' in order to propose the virtual \textbf{and} the real used simultaneously as new transversalities that question art and the becoming of our world.''}~\cite{Orlan2002}
 
 %=========================================================================================================
