--- a/bib.bib
+++ b/bib.bib
@@ -94,17 +94,17 @@ title = {{Pervasive Computing in Time and Space: The Culture and Context of 'Pla
 url = {http://dx.doi.org/doi:10.1109/IE.2011.65},
 year = {2011}
 }
+@inproceedings{Applin2013,
+author = {Applin, Sally A and Fischer, Michael},
+booktitle = {Proceedings of the IEEE International Symposium on Technology and Society (ISTAS)},
+title = {{Watching Me, Watching You (Process Surveillance and Agency in the Workplace)}},
+year = {2013}
+}
 @inproceedings{Applin2013a,
 abstract = {We explore how PolySocial Reality (PoSR), a framework for representing how people, devices and communication technologies interrelate, can be applied to developing use cases within integrated IoT and Smart Environment paradigms, giving special consideration to the nature of location-aware messaging from sensors, and the resultant data collection.},
 author = {Applin, Sally A and Fischer, Michael},
 booktitle = {Proceedings of the IEEE Conference on Intelligent User Interfaces (IUI 2013) IUI Workshop on Location Awareness for Mixed and Dual Reality (LAMDa)},
 title = {{Thing Theory: Connecting Humans to Location-Aware Smart Environments}},
-year = {2013}
-}
-@inproceedings{Applin2013,
-author = {Applin, Sally A and Fischer, Michael},
-booktitle = {Proceedings of the IEEE International Symposium on Technology and Society (ISTAS)},
-title = {{Watching Me, Watching You (Process Surveillance and Agency in the Workplace)}},
 year = {2013}
 }
 @misc{Applin2011b,
@@ -480,11 +480,7 @@ year = {2008}
 }
 @inproceedings{brandherm:simulation,
 address = {Richland, SC},
-annote = {        From Duplicate 1 (                           Simulation of sensor-based tracking in Second Life                         - Brandherm, Boris; Ullrich, Sebastian; Prendinger, Helmut )
-                
-Justification \& demonstration of using Second Life as a platform for simulating sensor networks.
-        
-      },
+annote = {From Duplicate 1 ( Simulation of sensor-based tracking in Second Life - Brandherm, Boris; Ullrich, Sebastian; Prendinger, Helmut )},
 author = {Brandherm, Boris and Ullrich, Sebastian and Prendinger, Helmut},
 booktitle = {Proceedings of the 7th international joint conference on Autonomous agents and multiagent systems: demo papers},
 file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Brandherm, Ullrich, Prendinger - 2008 - Simulation of sensor-based tracking in Second Life.pdf:pdf},
@@ -803,12 +799,6 @@ publisher = {Oxford University Press},
 title = {{The Virtuality and Reality of Avatar Cyberspace}},
 year = {2014}
 }
-@misc{Davies,
-author = {Davies, C J},
-title = {{Arduino sketch for Pangolin}},
-url = {https://bitbucket.org/cj\_davies/arduino\_hmc6434\_ublox\_max\_6\_tinygps},
-urldate = {2013-04-01}
-}
 @misc{Daviesb,
 author = {Davies, C J},
 title = {{Database as tar archive suitable for input into pg\_restore}},
@@ -825,6 +815,12 @@ urldate = {2013-04-01}
 author = {Davies, C J},
 title = {{Pangolin source code}},
 url = {https://bitbucket.org/cj\_davies/viewer-release-serial-io},
+urldate = {2013-04-01}
+}
+@misc{Davies,
+author = {Davies, C J},
+title = {{Arduino sketch for Pangolin}},
+url = {https://bitbucket.org/cj\_davies/arduino\_hmc6434\_ublox\_max\_6\_tinygps},
 urldate = {2013-04-01}
 }
 @inproceedings{Davies2012,
@@ -1153,13 +1149,6 @@ pages = {256},
 title = {{Mirror Worlds: or the Day Software Puts the Universe in a Shoebox...How It Will Happen and What It Will Mean}},
 year = {1993}
 }
-@misc{Gelissen2008,
-author = {Gelissen, Jean},
-publisher = {International Organization for Standardization},
-title = {{Summary of MPEG-V}},
-url = {http://mpeg.chiariglione.org/working\_documents.php},
-year = {2008}
-}
 @article{Gelissen2009,
 annote = {        From Duplicate 1 (                           Introduction to MPEG-V                         - Gelissen, Jean )
                 
@@ -1177,6 +1166,13 @@ title = {{Introduction to MPEG-V}},
 url = {http://journals.tdl.org/jvwr/article/view/742/533},
 volume = {2},
 year = {2009}
+}
+@misc{Gelissen2008,
+author = {Gelissen, Jean},
+publisher = {International Organization for Standardization},
+title = {{Summary of MPEG-V}},
+url = {http://mpeg.chiariglione.org/working\_documents.php},
+year = {2008}
 }
 @article{Gelissen2011,
 abstract = {In this issue, we report on the first phase of MPEG-V, a work that started in 2007. MPEG-V was conceived as a unified effort to develop standards within virtual worlds, and between virtual worlds and real worlds. This work culminated in the publication of the ISO/IEC MPEG-V 'Media context and control' standards in January 2011. The papers in this issue of the Journal of Virtual World Research expose both the many current standards for virtual worlds, as well as the many missing standards. As such, the issue hints at many more places where standards are needed. To fulfill the potential of virtual worlds much more standardization (MPEG-V, and other standards) is needed.},
@@ -1340,17 +1336,17 @@ title = {{Bridging physical and virtual worlds with tagged documents, objects an
 url = {http://doi.acm.org/10.1145/632716.632738},
 year = {1999}
 }
-@misc{Harta,
-author = {Hart, Mikal},
-title = {{TinyGPS}},
-url = {http://arduiniana.org/libraries/tinygps/},
-urldate = {2013-03-31}
-}
 @misc{Hart,
 author = {Hart, Mikal},
 title = {{TinyGPS}},
 url = {http://arduiniana.org/libraries/tinygps/},
 urldate = {2013-04-01}
+}
+@misc{Harta,
+author = {Hart, Mikal},
+title = {{TinyGPS}},
+url = {http://arduiniana.org/libraries/tinygps/},
+urldate = {2013-03-31}
 }
 @misc{Haverinen2009,
 abstract = {Magnetic field fluctuations in modern buildings arise from both natural and man-made sources, such as steel and reinforced concrete structures, electric power systems, electric and electronic appliances, and industrial devices. If the anomalies of the magnetic field inside the building are nearly static and they have sufficient local variability, they provide a unique magnetic fingerprint that can be utilized in global self-localization. In this article, a Monte Carlo localization (MCL) technique based on this hypothesis is proposed. The feasibility of the technique is demonstrated by presenting a series of global localization experiments conducted in four arbitrarily selected buildings, including a hospital. The experiment setup consists of a mobile robot instrumented with a 3-axis magnetometer and a computer. In addition, successful human self-localization experiments were conducted by using a wireless wearable magnetometer. The reported experiments suggest that the ambient magnetic field may remain sufficiently stable for longer periods of time, giving support for self-localization techniques utilizing the local deviations of the field.},
@@ -1404,6 +1400,16 @@ title = {{Being there: The subjective experience of presence}},
 url = {http://dl.acm.org/citation.cfm?id=196589},
 volume = {1},
 year = {1992}
+}
+@article{Heim1998,
+abstract = {"Virtual Realism" is an art form and a way of living with technology. To explain the concept, the author begins with the conflict inherent in the philosophy of technology (Unabomber and the computer culture). The article draws on interactive art, software engineering, and popular culture to clarify the issue of lifestyles. Twelve suggestions are made to develop a harmony of technology and lifestyle. The article is a chapter in a book by the same title (Oxford U. Press, 1998)>},
+author = {Heim, Michael},
+journal = {Bridges},
+keywords = {Cyberspace,Ellul, J,Ethics,Realism,Technology,Toffler, H,Toffler, a,Virtual Reality},
+pages = {5(3--4) 175--195},
+pmid = {1164349},
+title = {{Virtual Realism}},
+year = {1998}
 }
 @article{Held1992,
 author = {Held, Richard and Durlach, Nathaniel},
@@ -1524,9 +1530,6 @@ url = {http://hunt.net.nz/users/darran/weblog/a3599/},
 urldate = {2012-04-06}
 }
 @misc{IBM2008,
-annote = {Press release for IBM's 3-D Data Center technology and Holographic Enterprise Network middleware.
-Used by Implenia (the guys who headed the Eolus One project) to further the ability of their building
-management virtual world interface to control HVAC/etc. to effect reductions in energy consumption, etc.},
 author = {IBM},
 title = {{Made in IBM Labs: IBM 3-D Data Centers Show Virtual Worlds Fit for Business}},
 url = {http://www-03.ibm.com/press/us/en/pressrelease/23565.wss},
@@ -1574,18 +1577,18 @@ title = {{Accuracy of IndoorAtlas indoor positioning system}},
 url = {https://www.indooratlas.com/faq\#q242897},
 urldate = {2014-01-13}
 }
+@misc{IndoorAtlasLtd.,
+author = {{IndoorAtlas Ltd.}},
+title = {{Technology}},
+url = {http://www.indooratlas.com/Technology},
+urldate = {2013-02-11}
+}
 @unpublished{IndoorAtlasLtd.2012,
 author = {{IndoorAtlas Ltd.}},
 pages = {5},
 title = {{Ambient magnetic field-based indoor location technology}},
 url = {http://web.indooratlas.com/web/WhitePaper.pdf},
 year = {2012}
-}
-@misc{IndoorAtlasLtd.,
-author = {{IndoorAtlas Ltd.}},
-title = {{Technology}},
-url = {http://www.indooratlas.com/Technology},
-urldate = {2013-02-11}
 }
 @incollection{Insko2003,
 abstract = {Virtual reality (VR) systems enable the user to feel as if they are present in a computer generated environment. But how do we determine the extent to which a user feels present in the virtual environment? This chapter examines three categories of methods commonly used for measuring presence; their use in the field, advantages, and disadvantages. Subjective measures rely on self-assessment by the user. Users answer questions such as "How real did the environment seem to you?", "Was the environment like a place you visited, or a series of images presented to you?". Behavioral measures examine actions or manners exhibited by the user that are responses to objects or events in the virtual environment. For example, does the user duck if a virtual object is thrown at his head. Physiological methods attempt to measure presence by gauging changes in the subject's heart rate, skin temperature, skin conductance, breathing rate, etc. In a stress-inducing virtual environment does the user exhibit physiological signs of stress? How do these methods compare when using the criteria of reliability, validity, objectivity, and sensitivity.},
@@ -2790,6 +2793,16 @@ title = {{OpenSim}},
 url = {http://opensimulator.org/wiki/Main\_Page},
 urldate = {2012-03-29}
 }
+@incollection{Orlan2002,
+author = {Orlan},
+booktitle = {The Cyborg Experiments: the extensions of the body in the media age},
+chapter = {10},
+editor = {Zylinska, Joanna},
+pages = {168--171},
+publisher = {Continuum},
+title = {{The Virtual and/or the Real}},
+year = {2002}
+}
 @article{Osborne2009,
 annote = {More economics really.},
 author = {Osborne, Evan and Schiller, Shu},
@@ -2827,15 +2840,6 @@ pages = {165--174},
 title = {{Supporting interoperability and presence awareness in collaborative mixed reality environments}},
 year = {2013}
 }
-@article{Papagiannakis2009,
-abstract = {We propose an integrated Mixed Reality methodology for recreating ancient daily life that features realistic simulations of animated virtual human actors (clothes, body, skin, face) who augment real environments and re-enact staged storytelling dramas. We aim to go further from traditional concepts of static cultural artifacts or rigid geometrical and 2D textual augmentations and allow for 3D, interactive, augmented historical character-based event representations in a mobile and wearable setup. This is the main contribution of the described work as well as the proposed extensions to AR Enabling technologies: a VR/AR character simulation kernel framework with real-time, clothed virtual humans that are dynamically superimposed on live camera input, animated and acting based on a predefined, historically correct scenario. We demonstrate such a real-time case study on the actual site of ancient Pompeii.},
-author = {Papagiannakis, George and Magnenat-Thalmann, Nadia},
-journal = {Arqueologica 2.0},
-pages = {16--20},
-title = {{Recreating Daily Life in Pompeii}},
-volume = {1},
-year = {2009}
-}
 @article{Papagiannakis2007,
 abstract = {We propose a new methodology for real-time mobile mixed reality systems that feature realistic simulations of animated virtual human actors (clothes, body, skin, face) who augment real environments and re-enact staged storytelling dramas. Although ini- tially targeted at Cultural Heritage Sites, the paradigm is by no means limited to such subjects. The abandonment of traditional concepts of static cultural artifacts or rigid geometrical and 2D textual augmentations with 3D, interactive, augmented histori- cal character-based event representations in a mobile and wearable setup, is the main contribution of the described work as well as the proposed extensions to AR Enabling technologies: a VR/AR character simulation kernel framework with character to object interaction, a markerless camera tracker specialized for non-invasive geometrical registration on heritage sites and a PRT mixed reality illumination model for more consistent real-virtual real-time rendering. We demonstrate a real-time case study on the actual site of ancient Pompeii. PDF},
 author = {Papagiannakis, George and Magnenat-Thalmann, Nadia},
@@ -2848,6 +2852,15 @@ title = {{Mobile Augmented Heritage: Enabling Human Life in Ancient Pompeii}},
 url = {http://openurl.ingenta.com/content/xref?genre=article\&issn=1478-0771\&volume=5\&issue=2\&spage=396},
 volume = {5},
 year = {2007}
+}
+@article{Papagiannakis2009,
+abstract = {We propose an integrated Mixed Reality methodology for recreating ancient daily life that features realistic simulations of animated virtual human actors (clothes, body, skin, face) who augment real environments and re-enact staged storytelling dramas. We aim to go further from traditional concepts of static cultural artifacts or rigid geometrical and 2D textual augmentations and allow for 3D, interactive, augmented historical character-based event representations in a mobile and wearable setup. This is the main contribution of the described work as well as the proposed extensions to AR Enabling technologies: a VR/AR character simulation kernel framework with real-time, clothed virtual humans that are dynamically superimposed on live camera input, animated and acting based on a predefined, historically correct scenario. We demonstrate such a real-time case study on the actual site of ancient Pompeii.},
+author = {Papagiannakis, George and Magnenat-Thalmann, Nadia},
+journal = {Arqueologica 2.0},
+pages = {16--20},
+title = {{Recreating Daily Life in Pompeii}},
+volume = {1},
+year = {2009}
 }
 @article{Papagiannakis2005,
 abstract = {This paper presents an innovative 3D reconstruction of ancient fresco paintings through the real-time revival of their fauna and flora, featuring groups of virtual animated characters with artificial-life dramaturgical behaviours in an immersive, fully mobile augmented reality (AR) environment. The main goal is to push the limits of current AR and virtual storytelling technologies and to explore the processes of mixed narrative design of fictional spaces (e.g. fresco paintings) where visitors can experience a high degree of realistic immersion. Based on a captured/real-time video sequence of the real scene in a video-see-through HMD set-up, these scenes are enhanced by the seamless accurate real-time registration and 3D rendering of realistic complete simulations of virtual flora and fauna (virtual humans and plants) in a real-time storytelling scenario-based environment. Thus the visitor of the ancient site is presented with an immersive and innovative multi-sensory interactive trip to the past. Copyright (c) 2005 John Wiley T Sons, Ltd.},
@@ -3101,6 +3114,17 @@ publisher = {Springer-Verlag},
 title = {{Cyberspace as Representation of Space Experience: In Defence of a Phenomenological Approach}},
 year = {2002}
 }
+@misc{Regenbrecht2002a,
+abstract = {It has long been argued that the possibility to interact in and with a virtual environment (VE) enhances the sense of pres- ence. On the basis of a three-component model of presence, we specify this hypothesis and argue that the mental represen- tation of possible actions should especially enhance spatial presence, and to a lesser extent the involvement and realness of a VE. We support this hypothesis in three studies. A corre- lative study showed that self-reported interaction possibilities correlated significantly with spatial presence, but not with the other two factors. A first experimental study showed that pos- sible self-movement significantly increased spatial presence and realness. A second experimental study showed that even the illusion of interaction, with no actual interaction taking place, significantly increased spatial presence.},
+author = {Regenbrecht, Holger and Schubert, Thomas},
+booktitle = {Presence: Teleoperators and Virtual Environments},
+issn = {1054-7460},
+number = {4},
+pages = {425--434},
+title = {{Real and Illusory Interactions Enhance Presence in Virtual Environments}},
+volume = {11},
+year = {2002}
+}
 @inproceedings{Regenbrecht2002,
 author = {Regenbrecht, Holger and Schubert, Thomas},
 booktitle = {Proceedings of the 5th Annual International Workshop on Presence},
@@ -3112,17 +3136,6 @@ author = {Regenbrecht, Holger and Schubert, Thomas},
 keywords = {augmented reality,sense of presence},
 title = {{Measuring Presence in Augmented Reality Environments : Design and a First Test of a Questionnaire}},
 year = {1992}
-}
-@misc{Regenbrecht2002a,
-abstract = {It has long been argued that the possibility to interact in and with a virtual environment (VE) enhances the sense of pres- ence. On the basis of a three-component model of presence, we specify this hypothesis and argue that the mental represen- tation of possible actions should especially enhance spatial presence, and to a lesser extent the involvement and realness of a VE. We support this hypothesis in three studies. A corre- lative study showed that self-reported interaction possibilities correlated significantly with spatial presence, but not with the other two factors. A first experimental study showed that pos- sible self-movement significantly increased spatial presence and realness. A second experimental study showed that even the illusion of interaction, with no actual interaction taking place, significantly increased spatial presence.},
-author = {Regenbrecht, Holger and Schubert, Thomas},
-booktitle = {Presence: Teleoperators and Virtual Environments},
-issn = {1054-7460},
-number = {4},
-pages = {425--434},
-title = {{Real and Illusory Interactions Enhance Presence in Virtual Environments}},
-volume = {11},
-year = {2002}
 }
 @article{Reilly2010,
 abstract = {We introduce TwinSpace, a flexible software infrastructure for combining interactive workspaces and collaborative virtual worlds. Its design is grounded in the need to support deep connectivity and flexible mappings between virtual and real spaces to effectively support collaboration. This is achieved through a robust connectivity layer linking heterogeneous collections of physical and virtual devices and services, and a centralized service to manage and control mappings between physical and virtual. In this paper we motivate and present the architecture of TwinSpace, discuss our experiences and lessons learned in building a generic framework for collaborative cross-reality, and illustrate the architecture using two implemented examples that highlight its flexibility and range, and its support for rapid prototyping.},
@@ -3429,28 +3442,7 @@ title = {{Welcome to the New Journal}},
 volume = {1},
 year = {1992}
 }
-@article{Sivan2008,
-annote = {Interesting bit about Vuzix iWear VR920 3D goggles which, through a special driver for Second Life, allowed you to view a virtual world simply by turning your head (but of course didn't work for any other virtual world \& in fact only a specific version of Second Life) - but shows that controlling the gaze of the avatar/camera from a real-time external data source is possible through modification of the VW server (eg a region module in OpenSim).},
-author = {Sivan, Yesha},
-journal = {Journal of Virtual Worlds Research},
-number = {2},
-title = {{Real Virtual Worlds SOS (State of Standards) Q3-2008}},
-url = {http://journals.tdl.org/jvwr/article/view/359},
-volume = {1},
-year = {2008}
-}
-@article{Sivan2011,
-abstract = {With this issue JVWR celebrates its fourth year. During these years, we have matured to be the prime source of research in our emerging domain. Earlier this month (Dec. 2011), we celebrated, for the first time, by hosting a JVWR workshop at the International Conference on Information Systems (ICIS 2011 Shanghai, China. This issue takes an historical perspective. In many ways, this issue is a direct decedent of Volume 2, Number 3 - Technology, Economy and Standards in Virtual Worlds. The latter has drawn a vision, this one reports on the outcomes. On this note of moving from vision to reality, I wanted to wish us all happy new 2012.},
-author = {Sivan, Yesha},
-journal = {Journal of Virtual Worlds Research},
-number = {3},
-title = {{Managing Editor’s Corner: Celebrating Four Years and Planning for the Next}},
-url = {https://journals.tdl.org/jvwr/article/view/6140},
-volume = {4},
-year = {2011}
-}
 @article{Sevan2008,
-annote = {Very good \& thorough background/introduction to 'real virtual worlds', assuming no previous knowledge into the subject. Focuses strongly on Second Life.},
 author = {Sivan, Yesha},
 issn = {19418477},
 journal = {Journal of Virtual Worlds Research},
@@ -3476,6 +3468,26 @@ title = {{Overview: State of Virtual Worlds Standards in 2009}},
 url = {http://journals.tdl.org/jvwr/article/view/671/539},
 volume = {2},
 year = {2009}
+}
+@article{Sivan2008,
+annote = {Interesting bit about Vuzix iWear VR920 3D goggles which, through a special driver for Second Life, allowed you to view a virtual world simply by turning your head (but of course didn't work for any other virtual world \& in fact only a specific version of Second Life) - but shows that controlling the gaze of the avatar/camera from a real-time external data source is possible through modification of the VW server (eg a region module in OpenSim).},
+author = {Sivan, Yesha},
+journal = {Journal of Virtual Worlds Research},
+number = {2},
+title = {{Real Virtual Worlds SOS (State of Standards) Q3-2008}},
+url = {http://journals.tdl.org/jvwr/article/view/359},
+volume = {1},
+year = {2008}
+}
+@article{Sivan2011,
+abstract = {With this issue JVWR celebrates its fourth year. During these years, we have matured to be the prime source of research in our emerging domain. Earlier this month (Dec. 2011), we celebrated, for the first time, by hosting a JVWR workshop at the International Conference on Information Systems (ICIS 2011 Shanghai, China. This issue takes an historical perspective. In many ways, this issue is a direct decedent of Volume 2, Number 3 - Technology, Economy and Standards in Virtual Worlds. The latter has drawn a vision, this one reports on the outcomes. On this note of moving from vision to reality, I wanted to wish us all happy new 2012.},
+author = {Sivan, Yesha},
+journal = {Journal of Virtual Worlds Research},
+number = {3},
+title = {{Managing Editor’s Corner: Celebrating Four Years and Planning for the Next}},
+url = {https://journals.tdl.org/jvwr/article/view/6140},
+volume = {4},
+year = {2011}
 }
 @article{Slater1999,
 abstract = {Explains why for not using the Witmer and Singer questionnaire for eliciting presence in virtual environments and a person's immersive tendencies. Differences in the definition of presence; Three aspects of presence; Factors that influence presence; Opinion on the questionnaire's design and methodology.},
@@ -3804,16 +3816,6 @@ title = {{TinyOS Home Page}},
 url = {http://www.tinyos.net/},
 urldate = {2012-02-22}
 }
-@incollection{Turkle2004,
-author = {Turkle, Sherry},
-booktitle = {Community in the Digital Age: Philosophy and Practice},
-chapter = {6},
-editor = {Feenberg, Andrew and Barney, Darin},
-pages = {101--117},
-publisher = {Rowman \& Littlefield},
-title = {{Our Split Screens}},
-year = {2004}
-}
 @book{Turkle2011,
 author = {Turkle, Sherry},
 pages = {384},
@@ -3830,6 +3832,16 @@ publisher = {Simon \& Schuster},
 title = {{Life on the Screen}},
 year = {1997}
 }
+@incollection{Turkle2004,
+author = {Turkle, Sherry},
+booktitle = {Community in the Digital Age: Philosophy and Practice},
+chapter = {6},
+editor = {Feenberg, Andrew and Barney, Darin},
+pages = {101--117},
+publisher = {Rowman \& Littlefield},
+title = {{Our Split Screens}},
+year = {2004}
+}
 @incollection{Tzortzaki2002,
 author = {Tzortzaki, Delia},
 booktitle = {Virtual Space: Spatiality in Virtual Inhabited 3D Worlds},
@@ -3839,6 +3851,12 @@ pages = {258--284},
 publisher = {Springer-Verlag},
 title = {{Virtual Reality as Simulation: The CAVE as "Space of Illusion" in Museum Displays}},
 year = {2002}
+}
+@misc{U-bloxAGa,
+author = {u-blox AG},
+title = {{u-center GPS evaluation software}},
+url = {http://www.u-blox.com/en/evaluation-tools-a-software/u-center/u-center.html},
+urldate = {2012-03-28}
 }
 @misc{U-bloxAG,
 author = {u-blox AG},
@@ -3852,20 +3870,8 @@ title = {{MAX-6 Product Summary}},
 url = {http://www.u-blox.com/images/downloads/Product\_Docs/MAX-6\_ProductSummary\_(GPS.G6-HW-10089).pdf},
 year = {2012}
 }
-@misc{U-bloxAGa,
-author = {u-blox AG},
-title = {{u-center GPS evaluation software}},
-url = {http://www.u-blox.com/en/evaluation-tools-a-software/u-center/u-center.html},
-urldate = {2012-03-28}
-}
 @misc{UgoTrade2007,
-annote = {        From Duplicate 1 (                           EOLUS Makes Leap To 3D Internet On Second Life                         - UgoTrade )
-                
-Background/history of the EOLUS One cross-reality real-estate mgmt project. Mediated between various different building
-monitoring \& automation platforms, represented in Second Life \& had a
-measurable beneficial effect on th energy usage of the buildings.
-        
-      },
+annote = {From Duplicate 1 ( EOLUS Makes Leap To 3D Internet On Second Life - UgoTrade )},
 author = {UgoTrade},
 howpublished = {$\backslash$url\{http://www.ugotrade.com/2007/07/02/eolus-makes-leap-to-3d-internet-on-second-life/\}},
 month = jul,
