--- a/thesis.tex
+++ b/thesis.tex
@@ -227,7 +227,7 @@
 
 % ======= ======= ======= ======= ======= ======= =======
 
-\chapter{Conclusions and Discussion}
+\chapter{Conclusion}
 \graphicspath{ {06_mirrorshades_studies_results/images/} }
 \input{07_conclusions/conclusions.tex}
 
