Finishing future work/final thoughts

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -459,6 +459,8 @@ Picking up the discussion of primary environments once more, if one follows the 
 
 \subsection{Spatial Equivalence in Parallel Reality}
 
+\label{spatial-equivalence}
+
 %(Life on the Screen, p219
 \newcommand{\turklevrfootnote}{\footnote{\textit{``For virtual reality to be interesting it has to emulate the real. But you have to be able to do something in the virtual that you couldn't in the real.''}~\cite{Turkle1997}}}
 
