Finishing future work/final thoughts

--- a/00_abstract/abstract.tex
+++ b/00_abstract/abstract.tex
@@ -1,1 +1,3 @@
-This thesis discusses the development of a system that allows its user to observe and move around their real world environment whilst wearing equipment that allows them to alternatively view an immersive virtual reality environment from the equivalent vantage point. This style of interaction with complete real and virtual environments is presented as a new category of alternate reality, called parallel reality. The position of parallel reality is established in relation to previously explored alternate realities and analysis and discussion of results from preliminary user studies of the system are presented.
+Alternate realities have fascinated mankind since early prehistory and with the advent of the computer and the smartphone we have seen the rise of many different categories of alternate reality that replace, augment, diminish, mix with or ultimately replace our familiar real world in order to expand our capabilities and our understanding. This thesis proposes \textit{parallel reality} as a new category of alternate reality that further addresses the vacancy problem identified in some previously explored alternate realities and comprises two environments, one real and the other virtual, each complete unto itself and wherein the user may freely switch between them. Parallel reality is framed within the larger ecosystem of alternate realities through a thorough review of existing categorisation techniques and taxonomies, leading to updates and extensions to several popular models. The combined Milgram/Waterworth model is presented as a technique for visualising experience in a parallel reality system.
+
+The development of a full parallel reality implementation called Mirrorshades is presented, combining the modern virtual reality hardware of the Oculus Rift with the novel indoor positioning system of IndoorAtlas. In this fashion, users are granted the ability to walk through their real environment and to at any moment switch their view to the equivalent vantage point within an immersive virtual environment. The benefits that such a system imparts upon its user by granting them this ability to explore parallel real and virtual environments in tandem is shown through application to a use case within the realm of cultural heritage, with evaluation of these studies leading to a number of best practices for future parallel reality endeavours.
